--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -15,12 +15,12 @@
   </tr>
   <tr>
     <th>商品価格</th>
-    <td><%= number_field :price %></td>
+    <td><%= f.number_field :price %></td>
   </tr>
   <tr>
     <th>ジャンル</th>
-    <td></td>
+    <td><%= f.collection_select :genre_id, Genre.all, :id, :name, :include_blank => '選択してください' %></td>
   </tr>
-  <%= f.submit '新規登録' %>
 </table>
+<%= f.submit '新規登録' %>
 <% end %>
