--- a/app/views/admins/genres/edit.html.erb
+++ b/app/views/admins/genres/edit.html.erb
@@ -1,10 +1,10 @@
 <h1>ジャンル編集</h1>
-<%= form_with model: @genre, url:admins_genres_path, local:true do |f| %>
+<%= form_with model: @genre, url:admins_genre_path, local:true do |f| %>
 <table>
   <tr>
     <th>ジャンル名</th>
     <td><%= f.text_field :name %></td>
-    <td><%= link_to '変更を保存', admin_genres_path %></td>
+    <td><%= f.submit '変更を保存' %></td>
   </tr>
 </table>
 <% end %>
