--- a/app/views/admins/genres/index.html.erb
+++ b/app/views/admins/genres/index.html.erb
@@ -12,7 +12,7 @@
 <table>
   <thead>
     <tr>
-      <th>ジャンル名</th>
+      <th>ジャンル一覧</th>
       <th></th>
     </tr>
   </thead>
@@ -20,7 +20,7 @@
   <tbody>
     <tr>
       <td><%= genre.name %></td>
-      <td><%= link_to '編集', edit_admin_genre_path(genre.id) %></td>
+      <td><%= link_to '編集', edit_admins_genre_path(genre.id) %></td>
     </tr>
   </tbody>
   <% end %>
