--- a/app/views/admins/items/edit.html.erb
+++ b/app/views/admins/items/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>商品編集</h1>
-<%= form_with model: @item, url:admins_items_path, local:true do |f| %>
+<%= form_with model: @item, url:admins_item_path, local:true do |f| %>
 <table>
   <tr>
     <th>商品画像</th>
