--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -6,5 +6,5 @@
     <td><%= @item.price %></td>
     <td><%= @item.genre %></td>
   </tr>
-  <%= link_to '編集する', edit_admin_item_path(@item.id) %>
+  <%= link_to '編集する', edit_admins_item_path(@item.id) %>
 </table>
