ログイン画面修正/homes controller追加

--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -5,7 +5,7 @@
       <th>商品画像</th>
       <th>商品名</th>
       <th>スペック</th>
-      <th>価格</th>
+      <th>価格帯</th>
     </tr>
   </thead>
   <% @items.each do |item| %>
