--- a/app/views/end_users/users/edit.html.erb
+++ b/app/views/end_users/users/edit.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <th>名前</th>
-    <td><%= f.text_field :last_name %><%= f.text_field :first_name %></td>
+    <td><%= f.text_field :last_name %><%= f.text_field :fitst_name %></td>
   </tr>
   <tr>
     <th>カナ</th>
