--- a/app/views/end_users/items/show.html.erb
+++ b/app/views/end_users/items/show.html.erb
@@ -1,8 +1,13 @@
 <h1>商品詳細</h1>
+<div>
+  製品画像：
+  <% if @item.favorited_by?(current_user) %>
+    <%= link_to 'お気に入りリスト追加済み', end_users_item_favorite_path(@item_id), method: :delete %>
+  <% else %>
+    <%= link_to 'お気に入りリストに追加', end_users_item_favorites_path(@item_id), method: :post %>
+  <% end %>
+</div>
 <table>
-  <tr>
-    <td>製品画像：</td>
-  </tr>
   <tr>
     <td>製品名：<%= @item.name %></td>
   </tr>
