end_users item/user fix

--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -14,7 +14,7 @@
       <td></td>
       <td><%= item.name %></td>
       <td><%= item.price %></td>
-      <td><%= item.pc_spec %></td>
+      <td><%= item.item_spec %></td>
     </tr>
   </tbody>
   <% end %>
