--- a/app/views/end_users/users/edit.html.erb
+++ b/app/views/end_users/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>会員情報編集</h1>
-<%= form_with model: @user, url:end_users_users_path, local:true do |f| %>
+<%= form_with model: @user, url:end_users_user_path, local:true do |f| %>
 <table>
   <tr>
     <th>名前</th>
@@ -17,6 +17,6 @@
     <th>パスワード</th>
     <td><%= f.text_field :password %></td>
   </tr>
-  <%= f.submit '変更を保存' %>
 </table>
+<%= f.submit '変更を保存' %>
 <% end %>
