--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,36 @@
   </head>
 
   <body>
+    <header>
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to 'マイページ', end_users_user_path %>
+        </li>
+        <li>
+          <%= link_to '製品一覧', end_users_items_path %>
+        </li>
+        <li>
+          <%= link_to 'お気に入りリスト', end_users_item_favorites %>
+        </li>
+        <li>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to '製品一覧', end_users_items_path %>
+        </li>
+        <li>
+          <%= link_to 'お気に入りリスト', end_users_item_favorites %>
+        </li>
+        <li>
+          <%= link_to '新規会員登録', new_user_registration_path %>
+        </li>
+        <li>
+          <%= link_to 'ログイン', new_user_session_path %>
+        </li>
+      <% end %>
+    </header>
     <%= yield %>
+    <footer></footer>
   </body>
 </html>
