--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -14,7 +14,7 @@
     <tr>
       <td></td>
       <td>
-        <%= link_to end_users_item_path do %>
+        <%= link_to end_users_item_path(item.id) do %>
           <%= item.name %>
         <% end %>
       </td>
