--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       </div>
       <% if user_signed_in? %>
         <li>
-          <%#= link_to 'マイページ', end_users_user_path %>
+          <%= link_to 'マイページ', end_users_user_path(current_user) %>
         </li>
         <li>
           <%= link_to '製品一覧', end_users_items_path %>
@@ -35,7 +35,7 @@
           <%= link_to '製品一覧', end_users_items_path %>
         </li>
         <li>
-          <%= link_to 'お気に入りリスト', end_users_item_favorites %>
+          <%#= link_to 'お気に入りリスト', end_users_item_favorites_path(@item.id) %>
         </li>
         <li>
           <%= link_to '新規会員登録', new_user_registration_path %>
