--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,41 +10,7 @@
   </head>
 
   <body>
-    <header>
-      <div>
-        <%= form_with url: end_users_search_path, method: :get, local: true do |f| %>
-          <%= f.text_field :keyword, value: @keyword %>
-          <%= f.submit '検索' %>
-        <% end %>
-      </div>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to 'マイページ', end_users_user_path(current_user) %>
-        </li>
-        <li>
-          <%= link_to '製品一覧', end_users_items_path %>
-        </li>
-        <li>
-          <%#= link_to 'お気に入りリスト', end_users_item_favorites_path %>
-        </li>
-        <li>
-          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to '製品一覧', end_users_items_path %>
-        </li>
-        <li>
-          <%#= link_to 'お気に入りリスト', end_users_item_favorites_path(@item.id) %>
-        </li>
-        <li>
-          <%= link_to '新規会員登録', new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to 'ログイン', new_user_session_path %>
-        </li>
-      <% end %>
-    </header>
+    <%= render 'layouts/header', item: @item, keyword: @keyword %>
     <%= yield %>
     <footer></footer>
   </body>
