--- a/app/views/admins/genres/edit.html.erb
+++ b/app/views/admins/genres/edit.html.erb
@@ -1,10 +1,17 @@
-<h1>ジャンル編集</h1>
-<%= form_with model: @genre, url:admins_genre_path, local:true do |f| %>
-<table>
-  <tr>
-    <th>ジャンル名</th>
-    <td><%= f.text_field :name %></td>
-    <td><%= f.submit '変更を保存' %></td>
-  </tr>
-</table>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-9 offset-lg-1">
+      <h3>ジャンル編集</h3>
+      <%# ジャンル編集フォーム %>
+      <%= form_with model: @genre, url:admins_genre_path, local:true do |f| %>
+      <table class="table table-borderless">
+        <tr>
+          <th>ジャンル名</th>
+          <td><%= f.text_field :name %></td>
+          <td><%= f.submit '変更を保存', class: "btn btn-dark" %></td>
+        </tr>
+      </table>
+      <% end %>
+    </div>
+  </div>
+</div>
