--- a/app/views/admins/genres/index.html.erb
+++ b/app/views/admins/genres/index.html.erb
@@ -1,27 +1,36 @@
-<h1>ジャンル追加/一覧</h1>
-<%= form_with model: @genre, url:admins_genres_path, local:true do |f| %>
-<table>
-  <tr>
-    <th>ジャンル名</th>
-    <td><%= f.text_field :name %></td>
-    <td><%= f.submit %></td>
-  </tr>
-</table>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-9 offset-lg-1">
+      <h3>ジャンル追加/一覧</h3>
 
-<table>
-  <thead>
-    <tr>
-      <th>ジャンル一覧</th>
-      <th></th>
-    </tr>
-  </thead>
-  <% @genres.each do |genre| %>
-  <tbody>
-    <tr>
-      <td><%= genre.name %></td>
-      <td><%= link_to '編集', edit_admins_genre_path(genre.id) %></td>
-    </tr>
-  </tbody>
-  <% end %>
-</table>
+      <%# ジャンル追加フォーム %>
+      <%= form_with model: @genre, url:admins_genres_path, local:true do |f| %>
+      <table class="table table-borderless">
+        <tr>
+          <th>ジャンル名</th>
+          <td><%= f.text_field :name %></td>
+          <td><%= f.submit 'ジャンル作成', class: "btn btn-dark" %></td>
+        </tr>
+      </table>
+      <% end %>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ジャンル一覧</th>
+            <th></th>
+          </tr>
+        </thead>
+        <%# 追加したジャンルを一覧表示 %>
+        <% @genres.each do |genre| %>
+        <tbody>
+          <tr>
+            <td><%= genre.name %></td>
+            <td><%= link_to '編集', edit_admins_genre_path(genre.id), class: "btn btn-dark" %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
