--- a/app/views/admins/users/show.html.erb
+++ b/app/views/admins/users/show.html.erb
@@ -1,24 +1,30 @@
-<h1>会員詳細</h1>
-<table>
-  <tr>
-    <th>会員ID</th>
-    <td><%= @user.id %></td>
-  </tr>
-  <tr>
-    <th>会員氏名</th>
-    <td><%= @user.lastname + @user.firstname %></td>
-  </tr>
-  <tr>
-    <th>会員氏名カナ</th>
-    <td><%= @user.lastname_kana + @user.firstname_kana %></td>
-  </tr>
-  <tr>
-    <th>会員メールアドレス</th>
-    <td><%= @user.email %></td>
-  </tr>
-  <tr>
-    <th>退会フラグ</th>
-    <td><%= @user.is_delete %></td>
-  </tr>
-  <%= link_to '会員一覧に戻る', admin_users_path %>
-</table>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-9 offset-lg-1">
+      <h3>会員詳細</h3>
+      <table class="table">
+        <tr>
+          <th>会員ID</th>
+          <td><%= @user.id %></td>
+        </tr>
+        <tr>
+          <th>会員氏名</th>
+          <td><%= @user.last_name + @user.fitst_name %></td>
+        </tr>
+        <tr>
+          <th>会員氏名カナ</th>
+          <td><%= @user.last_name_kana + @user.first_name_kana %></td>
+        </tr>
+        <tr>
+          <th>会員メールアドレス</th>
+          <td><%= @user.email %></td>
+        </tr>
+        <tr>
+          <th>退会フラグ</th>
+          <td><%= @user.is_delete %></td>
+        </tr>
+      </table>
+      <%= link_to '会員一覧に戻る', admins_users_path, class: "btn btn-dark" %>
+    </div>
+  </div>
+</div>
