--- a/app/views/end_users/items/_sidebar.html.erb
+++ b/app/views/end_users/items/_sidebar.html.erb
@@ -1,15 +1,17 @@
-<h1>ジャンル検索</h1>
-<table>
-  <thead>
-    <tr>
-      <th>ジャンル一覧</th>
-    </tr>
-  </thead>
-  <% genres.each do |genre| %>
-  <tbody>
-    <tr>
-      <td><%= link_to genre.name, end_users_search_path('search[keyword]', genre.id) %></td>
-    </tr>
-  </tbody>
-  <% end %>
-</table>
+<div class="col-lg-3">
+  <p><br><br></p>
+  <table class="table table-borderless">
+    <thead>
+      <tr class="border-bottom">
+        <th>ジャンル一覧</th>
+      </tr>
+    </thead>
+    <% genres.each do |genre| %>
+    <tbody>
+      <tr>
+        <td><%= link_to genre.name, end_users_search_path('search[keyword]', genre.id) %></td>
+      </tr>
+    </tbody>
+    <% end %>
+  </table>
+</div>
