--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -1,26 +1,36 @@
-<%= render 'end_users/items/sidebar', genres: @genres %>
-<h1>商品一覧</h1>
-<table>
-  <thead>
-    <tr>
-      <th>商品画像</th>
-      <th>商品名</th>
-      <th>価格帯</th>
-      <th>スペック</th>
-    </tr>
-  </thead>
-  <% @items.each do |item| %>
-  <tbody>
-    <tr>
-      <td></td>
-      <td>
-        <%= link_to end_users_item_path(item.id) do %>
-          <%= item.name %>
+<div class="container">
+  <div class="row">
+    <%= render 'end_users/items/sidebar', genres: @genres %>
+    <div class="col-lg-8 offset-1">
+      <h1>製品一覧</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>製品名</th>
+            <th>製品画像</th>
+            <th>価格帯</th>
+            <th>スペック</th>
+          </tr>
+        </thead>
+        <% @items.each do |item| %>
+        <tbody>
+          <tr>
+            <th>
+            <%= link_to end_users_item_path(item.id) do %>
+              <%= item.name %>
+            <% end %>
+            </th>
+            <td>
+              <%= link_to end_users_item_path(item.id) do %>
+                <%= attachment_image_tag item, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
+              <% end %>
+            </td>
+            <td><%= item.price %>円～</td>
+            <td><%= item.item_spec %></td>
+          </tr>
+        </tbody>
         <% end %>
-      </td>
-      <td><%= item.price %>～</td>
-      <td><%= item.item_spec %></td>
-    </tr>
-  </tbody>
-  <% end %>
-</table>
+    </table>
+    </div>
+  </div>
+</div>
