--- a/app/views/end_users/users/edit.html.erb
+++ b/app/views/end_users/users/edit.html.erb
@@ -1,22 +1,28 @@
-<h1>会員情報編集</h1>
-<%= form_with model: @user, url:end_users_user_path, local:true do |f| %>
-<table>
-  <tr>
-    <th>名前</th>
-    <td><%= f.text_field :last_name %><%= f.text_field :fitst_name %></td>
-  </tr>
-  <tr>
-    <th>カナ</th>
-    <td><%= f.text_field :last_name_kana %><%= f.text_field :first_name_kana %></td>
-  </tr>
-  <tr>
-    <th>メールアドレス</th>
-    <td><%= f.text_field :email %></td>
-  </tr>
-  <tr>
-    <th>パスワード</th>
-    <td><%= f.text_field :password %></td>
-  </tr>
-</table>
-<%= f.submit '変更を保存' %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-9 offset-lg-1">
+      <h3>会員情報編集</h3>
+      <div>
+        <%= form_with model: @user, url:end_users_user_path, local:true do |f| %>
+        <table class="table table-borderless">
+          <tr class="form-group">
+            <th>名前</th>
+            <td><%= f.text_field :last_name, class: "form-control" %></td>
+            <td><%= f.text_field :fitst_name, class: "form-control" %></td>
+          </tr>
+          <tr class="form-group">
+            <th>カナ</th>
+            <td><%= f.text_field :last_name_kana, class: "form-control" %></td>
+            <td><%= f.text_field :first_name_kana, class: "form-control" %></td>
+          </tr>
+          <tr class="form-group">
+            <th>メールアドレス</th>
+            <td><%= f.text_field :email, class: "form-control" %></td>
+          </tr>
+        </table>
+        <%= f.submit '変更を保存', class: "btn btn-dark" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
