--- a/app/views/end_users/users/show.html.erb
+++ b/app/views/end_users/users/show.html.erb
@@ -1,16 +1,18 @@
-<h1>マイページ</h1>
-<table>
-  <tr>
-    <th>名前</th>
-    <td><%= @user.last_name + @user.fitst_name %></td>
-  </tr>
-  <tr>
-    <th>メールアドレス</th>
-    <td><%= @user.email %></td>
-  </tr>
-  <tr>
-    <th>登録パスワード</th>
-    <td><%= @user.password %></td>
-  </tr>
-</table>
-<%= link_to '登録内容を変更', edit_end_users_user_path(@user.id) %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-9 offset-1">
+      <h3>マイページ</h3>
+      <table class="table">
+        <tr>
+          <th>名前</th>
+          <td><%= @user.last_name + @user.fitst_name %></td>
+        </tr>
+        <tr>
+          <th>メールアドレス</th>
+          <td><%= @user.email %></td>
+        </tr>
+      </table>
+      <%= link_to '登録内容を変更', edit_end_users_user_path(@user.id), class: "btn btn-dark" %>
+    </div>
+  </div>
+</div>
