--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Mania</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -12,6 +13,6 @@
   <body>
     <%= render 'layouts/header', item: @item, keyword: @keyword %>
     <%= yield %>
-    <footer></footer>
+    <footer class="shadow-sm bg-dark mt-lg-5" style="height: 50px;"></footer>
   </body>
 </html>
