--- a/app/views/end_users/items/_destroy_favorite.html.erb
+++ b/app/views/end_users/items/_destroy_favorite.html.erb
@@ -1,1 +1,28 @@
-<div id="destroy_favorite_<%= item.id %>"><%= link_to 'お気に入りリストから削除', end_users_item_favorites_path(item.id), method: :delete, remote: true %></div>
+<table class="table">
+  <thead>
+    <tr>
+      <th>製品画像</th>
+      <th>製品名</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody >
+　<% favorite_items.each do |item| %>
+　  <tr>
+      <td>
+        <%= link_to admins_item_path(item.id) do %>
+          <%= attachment_image_tag item, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
+        <% end %>
+      </td>
+      <td>
+        <%= link_to end_users_item_path(item.id) do %>
+          <%= item.name %>
+        <% end %>
+      </td>
+      <td>
+        <div><%= link_to 'お気に入りリストから削除', end_users_item_favorites_path(item.id), method: :delete, remote: true, class: "btn btn-danger" %></div>
+      </td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
