--- a/app/views/end_users/items/_favorite.html.erb
+++ b/app/views/end_users/items/_favorite.html.erb
@@ -1,5 +1,5 @@
 <% if item.favorited_by?(current_user) %>
-  <%= link_to 'お気に入りリスト追加済み', end_users_item_favorites_path(item.id), method: :delete, remote: true %>
+  <%= link_to 'お気に入りリスト追加済み', end_users_item_favorites_path(item.id), method: :delete, remote: true, class: "btn btn-danger" %>
 <% else %>
-  <%= link_to 'お気に入りリストに追加', end_users_item_favorites_path(item.id), method: :post, remote: true %>
+  <%= link_to 'お気に入りリストに追加', end_users_item_favorites_path(item.id), method: :post, remote: true, class: "btn btn-warning" %>
 <% end %>
