--- a/app/views/end_users/items/show.html.erb
+++ b/app/views/end_users/items/show.html.erb
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col-lg-3">
       <div>
-        <%= attachment_image_tag @item, :image, :fill, 200, 250, fallback: "no_image.jpg" %>
+        <%= attachment_image_tag @item, :image, :fill, 250, 200, fallback: "no_image.jpg" %>
       </div>
       <div id="favorite_bottons_<%= @item.id %>">
         <%= render 'end_users/items/favorite', item: @item %>
       </div>
     </div>
-    <div class="col-lg-8 offset-lg-1">
+    <div class="col-lg-7 offset-lg-1">
       <h3>商品詳細</h3>
       <table class="table">
         <tr>
@@ -21,16 +21,20 @@
           <td>製品スペック：<%= @item.item_spec %></td>
         </tr>
       </table>
-      <% @all_ranks.each.with_index(1) do |item, i| %>
-        第
-        = i
-        位
-        <%= item.name %>
-      <% end %>
-      <% @item.comments.each do |item_comment| %>
-      <table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-11">
+
+    <h4 class="mt-3 text-primary"><strong>ユーザーの声</strong></h4>
+    <% @item.comments.each do |item_comment| %>
+      <table class="table table border-bottom">
         <tr>
-          <td><%= item_comment.user.last_name + item_comment.user.fitst_name %></td>
+          <th>
+            <%= item_comment.user.last_name + item_comment.user.fitst_name %>
+            <div id="star-<%= item_comment.id %>">評価：</div>
+          </th>
+          <th></th>
         </tr>
         <tr>
           <td><%= item_comment.comment %></td>
@@ -39,26 +43,61 @@
           <% end %>
         </tr>
       </table>
-      <% end %>
+    <% end %>
 
-      <%= form_with(model:[@item, @item_comment], url:end_users_item_comments_path(@item.id), local: true) do |f| %>
-      <div class="form-group row" id="star">
-        <%= f.label :rate,'製品評価 ', class:'col-md-3 col-form-label' %>
-        <%= f.hidden_field :rate, id: :review_star %>
-      </div>
-      <script>
-        $('#star').raty({
-          size: 36,
-          starOff: '<%= asset_path('star-off.png') %>',
-          starOn: '<%= asset_path('star-on.png') %>',
-          starHalf: '<%= asset_path('star-half.png') %>',
-          scoreName: 'item[rate]',
-          half: true,
-        });
-      </script>
-      <%= f.text_area :comment, class: "form-control", rows: "8" %>
-      <%= f.submit 'コメントする', class: "btn btn-dark" %>
+　　<h4 class="mt-3 text-primary"><strong>製品に対するコメントフォーム</strong></h4>
+    <%= form_with(model:[@item, @item_comment], url:end_users_item_comments_path(@item.id), local: true) do |f| %>
+    <div class="form-group row" id="star">
+      <%= f.label :rate,'製品評価', class:'col-md-3 col-form-label' %>
+      <%= f.hidden_field :rate, id: :review_star %>
+    </div>
+    <script>
+      $('#star').raty({
+        size: 36,
+        starOff: '<%= asset_path('star-off.png') %>',
+        starOn: '<%= asset_path('star-on.png') %>',
+        starHalf: '<%= asset_path('star-half.png') %>',
+        scoreName: 'comment[rate]',
+        half: true,
+      });
+
+      <% @item.comments.each do |item_comment| %>
+      $('#star-<%= item_comment.id %>').raty({
+        size: 36,
+        starOff: '<%= asset_path('star-off.png') %>',
+        starOn: '<%= asset_path('star-on.png') %>',
+        starHalf: '<%= asset_path('star-half.png') %>',
+        readOnly: true,
+        score: <%= item_comment.rate %>,
+        half: true,
+      });
       <% end %>
+    </script>
+    <%= f.text_area :comment, class: "form-control", rows: "8" %>
+    <%= f.submit 'コメントする', class: "btn btn-dark" %>
+    <% end %>
+
+    <h4 class="mt-3 text-primary"><strong>人気・おすすめ製品ランキング</strong></h4>
+    <% @all_ranks.each.with_index(1) do |item, i| %>
+    <table class="table">
+      <tr>
+        <th>
+          <%= link_to end_users_item_path(item.id) do %>
+            <%= i %>位<%= item.name %>
+          <% end %>
+        </th>
+        <th></th>
+      </tr>
+      <tr>
+        <td>
+          <%= link_to end_users_item_path(item.id) do %>
+            <%= attachment_image_tag item, :image, :fill, 100, 100, fallback: "no_image.jpg" %>
+          <% end %>
+        </td>
+        <td><%= item.item_spec %></td>
+      </tr>
+    </table>
+    <% end %>
     </div>
   </div>
 </div>
