--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,14 @@
-<p>ようこそ</p>
+<div class="container">
+  <div class="row">
+    <%#= render 'end_users/items/sidebar', genres: @genres %>
+    <div class="col-lg-8 offset-lg-1">
+      <p>ようこそ！</p>
+      <p>当サイトは製品の比較サイトです。</p>
+      <p>会員登録をすることで、お気に入り登録ができたり、他のユーザーの意見を閲覧でき、</p>
+      <p>皆さんのショッピングに役立つことができます！</p>
+      <p></p>
+      <%= link_to '新規会員登録', new_user_registration_path, class: 'btn btn-primary' %>
+      <%= link_to 'ログイン', new_user_session_path, class: 'btn btn-success' %>
+    </div>
+  </div>
+</div>
