--- a/app/views/end_users/items/show.html.erb
+++ b/app/views/end_users/items/show.html.erb
@@ -2,6 +2,9 @@
   <div class="row">
     <div class="col-lg-3">
       <div>
+        <% @item.tags.each do |tag| %>
+          <%= tag.name %>
+        <% end %>
         <%= attachment_image_tag @item, :image, :fill, 250, 200, fallback: "no_image.jpg" %>
       </div>
       <div id="favorite_bottons_<%= @item.id %>">
