--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -2,6 +2,11 @@
   <div class="row">
     <div class="col-lg-3">
       <%= attachment_image_tag @item, :image, :fill, 250, 200, fallback: "no_image.jpg" %>
+      <div class="tag-box">
+        <% @item.tags.each do |tag| %>
+          <span class="label"><%= tag.name %></span>
+        <% end %>
+      </div>
     </div>
     <div class="col-lg-8 offset-lg-1">
       <h3>商品詳細</h3>
