--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,10 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+
+body {
+  background-image: image-url('5054622_m.jpg');
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
