--- a/app/views/end_users/users/edit.html.erb
+++ b/app/views/end_users/users/edit.html.erb
@@ -17,7 +17,7 @@
           </tr>
           <tr class="form-group">
             <th>メールアドレス</th>
-            <td><%= f.text_field :email, class: "form-control" %></td>
+            <td><%= f.email_field :email, class: "form-control" %></td>
           </tr>
         </table>
         <%= f.submit '変更を保存', class: "btn btn-dark" %>
