--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,6 @@
   <body>
     <%= render 'layouts/header', item: @item, keyword: @keyword %>
     <%= yield %>
-    <footer class="shadow-sm bg-dark mt-lg-5" style="height: 50px;"></footer>
+    <footer class="shadow-sm bg-dark mt-lg-5 fixed-bottom" style="height: 50px;"></footer>
   </body>
 </html>
