end_user item fix

--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <%= render 'end_users/items/sidebar', genres: @genres %>
     <div class="col-lg-8 offset-1">
-      <h3>製品一覧</h3>
-      <table class="table">
+
+      <table class="table text-light">
         <thead>
           <tr>
             <th>製品名</th>
