--- a/app/views/end_users/items/_sidebar.html.erb
+++ b/app/views/end_users/items/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="col-lg-3">
   <p><br><br></p>
-  <table class="table table-borderless text-light">
+  <table class="table table-borderless text-light genre-background">
     <thead>
       <tr class="border-bottom">
         <th>ジャンル一覧</th>
